--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
               </div>
             </div>
-            <a href="#" class="carousel-btn hvr-bounce-to-right">
+            <a href="#" class="carousel-btn  hvr-outline-in">
                 <span>more</span>
             </a>
             <div class="overlay">
@@ -267,7 +267,7 @@
                                 </div>
                             </div>
                             <p class="tab-pone">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-                            <a href="#" class="tab-btn hvr-bounce-to-top">
+                            <a href="#" class="tab-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                         </div>
@@ -290,7 +290,7 @@
                                 </div>
                             </div>
                             <p class="tab-pone">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-                            <a href="#" class="tab-btn hvr-bounce-to-top">
+                            <a href="#" class="tab-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                         </div>
@@ -313,7 +313,7 @@
                                 </div>
                             </div>
                             <p class="tab-pone">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-                            <a href="#" class="tab-btn hvr-bounce-to-top">
+                            <a href="#" class="tab-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                         </div>
@@ -338,7 +338,7 @@
                     <h4>Trusted Locksmith <br>
                         Ready 24 Hours</h4>
                     <h5>Lorem ipsum dolor  sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
-                    <a href="#" class="prof-btn hvr-bounce-to-bottom">
+                    <a href="#" class="prof-btn  hvr-outline-in">
                         <span>more</span>
                     </a>
                 </div>
@@ -361,7 +361,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Key Duplication</h5>
                               <p class="card-text">Our team of automotive security professionals possesses in-depth knowledge of automobile door locks and security systems.</p>
-                              <a href="#" class="service-btn hvr-bounce-to-top">
+                              <a href="#" class="service-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                             </div>
@@ -375,7 +375,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Safe Lock</h5>
                               <p class="card-text">Safe locks play a crucial role in keeping your valuables secure. Traditional combination locks offer yet  method of securing your safe.</p>
-                              <a href="#" class="service-btn hvr-bounce-to-top">
+                              <a href="#" class="service-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                             </div>
@@ -389,7 +389,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Door Lock Installation</h5>
                               <p class="card-text">Our team of automotive security professionals possesses in-depth knowledge of automobile door locks and security systems.</p>
-                              <a href="#" class="service-btn hvr-bounce-to-top">
+                              <a href="#" class="service-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                             </div>
@@ -403,7 +403,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Key Duplication</h5>
                               <p class="card-text">Our team of automotive security professionals possesses in-depth knowledge of automobile door locks and security systems.</p>
-                              <a href="#" class="service-btn hvr-bounce-to-top">
+                              <a href="#" class="service-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                             </div>
@@ -417,7 +417,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Safe Lock</h5>
                               <p class="card-text">Safe locks play a crucial role in keeping your valuables secure. Traditional combination locks offer yet  method of securing your safe.</p>
-                              <a href="#" class="service-btn hvr-bounce-to-top">
+                              <a href="#" class="service-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                             </div>
@@ -431,7 +431,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Door Lock Installation</h5>
                               <p class="card-text">Our team of automotive security professionals possesses in-depth knowledge of automobile door locks and security systems.</p>
-                              <a href="#" class="service-btn hvr-bounce-to-top">
+                              <a href="#" class="service-btn  hvr-outline-in">
                                 <span>more</span>
                             </a>
                             </div>
@@ -567,7 +567,7 @@
             </h3>
             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, <br>  luctus  necullamcorper mattis, pulvinar dapibus leo.
             </h4>
-            <a href="#" class="appoint-btn hvr-sweep-to-right">
+            <a href="#" class="appoint-btn  hvr-outline-inn">
                 <span>Make an Appointment</span>
             </a>
         </div>
@@ -617,6 +617,65 @@
         </div>
     </section>
     <!-- =====================Testi=end============================================================= -->
+    <section id="testitwo">
+        <div class="testitwo-content">
+            <div class="row">
+                <div class="col-8 ">
+                    <div class="testi-back-shape">
+                        <img src="images/testi-two-shape.png" alt="">
+                    </div>
+                    <div class="owl-carousel owl-theme testitwo-owl">
+                        <div class="item">
+                            <div class="testitwo-flex">
+                                <div class="testitwo-right-content-profile">
+                                    <img src="images/testi-two-profile.png" alt="">
+                                </div>
+                                <div class="testitwo-right-content">
+                                    <h3>Testimonials</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime fugiat neque dicta earum incidunt, voluptas quidem, voluptatem nisi explicabo sint nostrum est, architecto sit eveniet doloremque rerum hic ut quam!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="testitwo-flex">
+                                <div class="testitwo-right-content-profile">
+                                    <img src="images/testi-two-profile.png" alt="">
+                                </div>
+                                <div class="testitwo-right-content">
+                                    <h3>Testimonials</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime fugiat neque dicta earum incidunt, voluptas quidem, voluptatem nisi explicabo sint nostrum est, architecto sit eveniet doloremque rerum hic ut quam!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="testitwo-flex">
+                                <div class="testitwo-right-content-profile">
+                                    <img src="images/testi-two-profile.png" alt="">
+                                </div>
+                                <div class="testitwo-right-content">
+                                    <h3>Testimonials</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime fugiat neque dicta earum incidunt, voluptas quidem, voluptatem nisi explicabo sint nostrum est, architecto sit eveniet doloremque rerum hic ut quam!</p>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="testitwo-top">
+                        <h4>&#10077;</h4>
+                    </div>
+                    <div class="testitwo-bottom">
+                        <h4>&#10078;<h4>
+                    </div>
+                </div>
+                <div class="col-4 ">
+                    <h2>What Your 
+                        <br>
+                        Client Says
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- =====================Contact================================================================= -->
     <section id="contact">
         <div class="contact-content">
@@ -806,6 +865,27 @@
     $('#navbar-top .navbar-nav .drop .nav-link').on('click', function () {
       $('.navbar-collapse').collapse('hide');
     });
+   </script>
+   <script>
+    $('.testitwo-owl').owlCarousel({
+    loop:true,
+    margin:10,
+    nav:true,
+    dots:false,
+    navText: ['<i class="fa fa-caret-left" aria-hidden="true"></i>',
+            '<i class="fa fa-caret-right" aria-hidden="true"></i>'],
+    responsive:{
+        0:{
+            items:1
+        },
+        600:{
+            items:1
+        },
+        1000:{
+            items:1
+        }
+    }
+})
    </script>
 </body>
 
